--- a/src/styling/menu.css
+++ b/src/styling/menu.css
@@ -12,6 +12,10 @@
   background-color:#883955 ;
 
 }
+.menuItems>div{
+  padding: 1em;
+
+}
 .menu:hover .menuItems {
     display: block;
   }
